Translate links, title, url ... to english, correct emailRegex on frontend, change colour of logo and navigation, start to integrate google invisible recaptcha

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -31,13 +31,13 @@ nav {
 }
 
 #phoneNav {
-  background-color: #af3a3a;
+  background-color: #4A6C6F;
   justify-content: space-evenly;
 }
 
 #main {
   overflow: auto;
-  padding-top: 150px;
+  padding-top: 140px;
   padding-bottom: 120px;
 }
 
@@ -61,6 +61,12 @@ footer {
 
 #copyright {
   padding-top: 35px;
+  padding-left: 70px;
+}
+
+#recaptcha {
+  margin-top: 20px;
+  margin-left: 0px;
 }
 
 @media screen and (max-width: 590px) {
